fixed spacing for headers across pages

--- a/stratego/src/stylesheets/Stratego.css
+++ b/stratego/src/stylesheets/Stratego.css
@@ -26,6 +26,8 @@
 	width: 100%;
 	align-self: flex-end;
 	justify-self: flex-end;
+	align-content:flex-end;
+	justify-content: flex-end;
     padding-top: 2vh;
     padding-left: 2vh;
     overflow: auto;
